WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
72115
[WIN] Fix build without precompiled header.
https://bugs.webkit.org/show_bug.cgi?id=72115
Summary
[WIN] Fix build without precompiled header.
Patrick R. Gansterer
Reported
2011-11-11 05:07:42 PST
[WIN] Fix build without precompiled header.
Attachments
Patch
(3.83 KB, patch)
2011-11-11 05:10 PST
,
Patrick R. Gansterer
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Patrick R. Gansterer
Comment 1
2011-11-11 05:10:34 PST
Created
attachment 114676
[details]
Patch
WebKit Review Bot
Comment 2
2011-11-11 05:12:44 PST
Attachment 114676
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebCore/ChangeLog', u'Source/WebCor..." exit_code: 1 Source/WebCore/platform/network/cf/ResourceError.h:37: Alphabetical sorting problem. [build/include_order] [4] Total errors found: 1 in 8 files If any of these errors are false positives, please file a bug against check-webkit-style.
Alexey Proskuryakov
Comment 3
2011-11-11 10:30:16 PST
Comment on
attachment 114676
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=114676&action=review
> Source/WebCore/platform/ContextMenu.h:39 > +#include <windows.h>
Do we regularly include windows.h in headers, or do avoid doing that?
Patrick R. Gansterer
Comment 4
2011-11-11 11:31:54 PST
(In reply to
comment #3
)
> (From update of
attachment 114676
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=114676&action=review
> > > Source/WebCore/platform/ContextMenu.h:39 > > +#include <windows.h> > > Do we regularly include windows.h in headers, or do avoid doing that?
AFAIK we try to minimize the usage in headers, but windows.h is already included in the following files: Source/JavaScriptCore/wtf/Atomics.h Source/JavaScriptCore/wtf/Assertions.h Source/JavaScriptCore/wtf/PageAllocation.h Source/JavaScriptCore/wtf/TCSpinLock.h Source/JavaScriptCore/wtf/ThreadingPrimitives.h Source/JavaScriptCore/wtf/ThreadSpecific.h Source/WebCore/platform/FileSystem.h Source/WebCore/platform/Pasteboard.h Source/WebCore/platform/cf/win/CertificateCFWin.h Source/WebCore/platform/chromium/KeyboardCodes.h Source/WebCore/platform/graphics/FontCache.h Source/WebCore/platform/graphics/GraphicsContext.h Source/WebCore/platform/graphics/ca/win/LayerChangesFlusher.h Source/WebCore/platform/graphics/chromium/FontUtilsChromiumWin.h Source/WebCore/platform/graphics/chromium/TransparencyWin.h Source/WebCore/platform/graphics/chromium/UniscribeHelper.h Source/WebCore/platform/graphics/opentype/OpenTypeUtilities.h Source/WebCore/platform/graphics/skia/FontCustomPlatformData.h Source/WebCore/platform/graphics/skia/SkiaFontWin.h Source/WebCore/platform/graphics/win/GDIExtras.h Source/WebCore/platform/graphics/win/QTMovieGWorld.h Source/WebCore/platform/graphics/win/QTTrack.h Source/WebCore/platform/graphics/win/RefCountedGDIHandle.h Source/WebCore/platform/network/NetworkStateNotifier.h Source/WebCore/platform/network/ResourceHandleInternal.h Source/WebCore/platform/network/curl/ResourceHandleManager.h Source/WebCore/platform/text/wince/TextCodecWinCE.h Source/WebCore/platform/win/BitmapInfo.h Source/WebCore/platform/win/ClipboardUtilitiesWin.h Source/WebCore/platform/win/PEImage.h Source/WebCore/platform/win/SoftLinking.h Source/WebCore/platform/win/Win32Handle.h Source/WebCore/plugins/npapi.h Source/WebCore/plugins/win/PluginMessageThrottlerWin.h
WebKit Review Bot
Comment 5
2011-11-11 23:57:50 PST
Comment on
attachment 114676
[details]
Patch Clearing flags on attachment: 114676 Committed
r100072
: <
http://trac.webkit.org/changeset/100072
>
WebKit Review Bot
Comment 6
2011-11-11 23:57:54 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug